dev-admin/DeploymentConfig_dev-admin_test-tasks.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: test-tasks
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: test-tasks
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-tasks
    spec:
      containers:
      - image: quay.apps.cluster-6ab3.sandbox1873.opentlc.com/admin/test-tasks-app:latest
        imagePullPolicy: Always
        name: test-tasks
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
