dev-admin/Service_dev-admin_tasks.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tasks
    app.kubernetes.io/component: tasks
    app.kubernetes.io/instance: tasks
  name: tasks
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: tasks
  sessionAffinity: None
  type: ClusterIP
