dev-admin/Route_dev-admin_tasks.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: tasks
    app.kubernetes.io/component: tasks
    app.kubernetes.io/instance: tasks
  name: tasks
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: tasks
    weight: 100
  wildcardPolicy: None
