dev-admin/Route_dev-admin_test-tasks.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: test-tasks
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: test-tasks
    weight: 100
  wildcardPolicy: None
